--- a/FINAL_POO/nbproject/project.properties
+++ b/FINAL_POO/nbproject/project.properties
@@ -73,11 +73,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=FINAL_POO
-main.class=final_poo.GestionEscritorio
+main.class=final_poo.GestionLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_14
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
