--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /FINAL_POO/nbproject/private/
 /FINAL_POO/build/
 
+DEBER11_CESAR_SANTACRUZ/nbproject/private/private.properties
+DEBER11_CESAR_SANTACRUZ/nbproject/private/private.xml
