--- a/FINAL_POO/nbproject/project.properties
+++ b/FINAL_POO/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/FINAL_POO
 endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
@@ -47,8 +47,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=14
-javac.target=14
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -78,7 +78,7 @@ main.class=final_poo.GestionLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_14
+platform.active=JDK_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
