--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 DEBER11_CESAR_SANTACRUZ/nbproject/private/private.properties
 DEBER11_CESAR_SANTACRUZ/nbproject/private/private.xml
+/JavaApplication20/nbproject/private/
+/JavaApplication20/build/
+/prueba/nbproject/private/
